--- a/.config/helix/languages.toml
+++ b/.config/helix/languages.toml
@@ -14,7 +14,5 @@ auto-format = true
 [[language]]
 auto-format = true
 name = "markdown"
+formatter = { command = "prettier", args = ["--parser=markdown", "--stdin"] }
 
-[language.formatter]
-args = ["--prose-wrap=always", "--stdin", "--parser=markdown"]
-command = "prettier"
